# llm-vc-decision-textgrad

./: .gitignore  ARCHITECTURE.md  CACHING_AND_LOGGING.md  README.md  pyproject.toml  requirements.txt  vc_thesis_experiments.ipynb
experiments/: patch_p_at_k.py  patch_textgrad_step_metrics.py  patch_weighted_f1.py  run_ablation.py  run_baseline.py  run_experiments.py  run_judge_evaluation.py  run_textgrad.py
experiments/legacy/: run_baseline.py
notebooks/: EDA_notebook.ipynb  agent_data_quality_audit.ipynb  analysis.ipynb  colab_experiment_notebook.ipynb  colab_textgrad_visualization.ipynb  data_processing.ipynb  output_overview.ipynb  reasoning_explorer.ipynb  textgrad_visualization.ipynb
scripts/: recover_judge_output.py  run_vc_experiment.sh  split_objects_by_entity_type.py  test_job.sh
src/: __init__.py
src/agents/: __init__.py  base_agent.py  business_model_analyst.py  feasibility_analyst.py  investor.py  judge.py  market_analyst.py  single_agent.py  synthesizer.py  team_analyst.py  textgrad_synthesizer.py
src/environment/: __init__.py
src/evaluation/: __init__.py  ap_at_k.py  metrics.py
src/prompts/: __init__.py  templates.py
src/textgrad/: __init__.py
src/utils/: __init__.py  archive.py  data_splits.py  litellm_client.py  llm_client.py  logging.py
